# shad_c_hw_3

./: CMakeLists.txt  Makefile  builtins.c  builtins.h  evaluation.c  evaluation.h  impl_goodies.h  lisp_io.c  lisp_io.h  main.c  models.c  models.h  sample.txt
tests/: endToEnd_tests.cpp  iotools_tests.cpp  models_tests.cpp  strtools_tests.cpp  vector_tests.cpp
utils/: error_check_tools.h  goodies.h  iotools.c  iotools.h  new_tools.h  smartptr_tools.h  strtools.c  strtools.h  vector.h
